--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.1",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
     "uuid": "^8.3.2",
