--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "mytlagain",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sashapolyanski.github.io/TODOLIST/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@icons/material": "^0.4.1",
     "@mui/icons-material": "^5.6.1",
+    "@mui/lab": "^5.0.0-alpha.80",
     "@mui/material": "^5.6.1",
     "@mui/styled-engine-sc": "^5.6.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -18,6 +20,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^8.3.4",
     "axios": "^0.26.1",
+    "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
@@ -34,6 +37,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "jest:integration": "jest -c integration/jest.config.js",
